--- a/sysdrv/source/kernel/arch/arm/configs/luckfox_rv1106_linux_defconfig
+++ b/sysdrv/source/kernel/arch/arm/configs/luckfox_rv1106_linux_defconfig
@@ -1,6 +1,6 @@
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_KERNEL_XZ=y
-CONFIG_DEFAULT_HOSTNAME="localhost"
+CONFIG_DEFAULT_HOSTNAME="luckfox"
 CONFIG_SYSVIPC=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -28,6 +28,7 @@ CONFIG_CMDLINE_EXTEND=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPUFREQ_DT=y
 CONFIG_ARM_ROCKCHIP_CPUFREQ=y
 CONFIG_CPU_IDLE=y
@@ -70,6 +71,9 @@ CONFIG_MTD_UBI=y
 CONFIG_MTD_UBI_BLOCK=y
 CONFIG_BLK_DEV_LOOP=y
 CONFIG_BLK_DEV_RAM=y
+CONFIG_SCSI=y
+CONFIG_BLK_DEV_SD=y
+CONFIG_SCSI_UFSHCD=y
 CONFIG_NETDEVICES=y
 # CONFIG_NET_CORE is not set
 # CONFIG_NET_VENDOR_ALACRITECH is not set
@@ -220,6 +224,8 @@ CONFIG_SND_SIMPLE_CARD=y
 # CONFIG_USB_HID is not set
 CONFIG_USB=y
 CONFIG_USB_XHCI_HCD=y
+CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_STORAGE=y
 CONFIG_USB_DWC3=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_CONFIGFS=y
@@ -230,6 +236,7 @@ CONFIG_USB_CONFIGFS_F_UAC1=y
 CONFIG_USB_CONFIGFS_F_UAC2=y
 CONFIG_USB_CONFIGFS_F_HID=y
 CONFIG_USB_CONFIGFS_F_UVC=y
+CONFIG_USB_MASS_STORAGE=y
 CONFIG_MMC=y
 # CONFIG_PWRSEQ_EMMC is not set
 CONFIG_MMC_BLOCK_MINORS=32
@@ -280,6 +287,7 @@ CONFIG_DEVFREQ_GOV_USERSPACE=y
 CONFIG_EXTCON=y
 CONFIG_IIO=y
 CONFIG_ROCKCHIP_SARADC=y
+CONFIG_DHT11=y
 CONFIG_PWM=y
 CONFIG_PWM_ROCKCHIP=y
 CONFIG_PHY_ROCKCHIP_CSI2_DPHY=m
