Should enable stuff for uvc & ffmpeg I need
Which should be added with "make menuconfig" inside the buildroot we don't have yet.

--- a/sysdrv/tools/board/buildroot/luckfox_pico_defconfig
+++ b/sysdrv/tools/board/buildroot/luckfox_pico_defconfig
@@ -35,3 +35,9 @@ BR2_PACKAGE_SAMBA4=y
 BR2_PACKAGE_TIME=y
 BR2_PACKAGE_HTOP=y
 BR2_PACKAGE_NANO=y
+BR2_PACKAGE_FSWEBCAM=y
+BR2_PACKAGE_LIBV4L=y
+BR2_PACKAGE_LIBV4L_UTILS=y
+BR2_PACKAGE_FFMPEG=y
+BR2_PACKAGE_FFMPEG_FFPLAY=y
+BR2_PACKAGE_FFMPEG_FFPROBE=y
