--- a/sysdrv/tools/board/buildroot/luckfox_pico_defconfig
+++ b/sysdrv/tools/board/buildroot/luckfox_pico_defconfig
@@ -41,3 +41,14 @@ BR2_PACKAGE_LIBV4L_UTILS=y
 BR2_PACKAGE_FFMPEG=y
 BR2_PACKAGE_FFMPEG_FFPLAY=y
 BR2_PACKAGE_FFMPEG_FFPROBE=y
+BR2_PACKAGE_IPTABLES=y
+BR2_PACKAGE_IPTABLES_BPF_NFSYNPROXY=y
+BR2_PACKAGE_IPTABLES_NFTABLES=y
+BR2_PACKAGE_LIBVIRT=y
+BR2_PACKAGE_LIBVIRT_DAEMON=y
+BR2_PACKAGE_DOCKER_ENGINE=y
+BR2_PACKAGE_DOCKER_CLI=y
+BR2_PACKAGE_DOCKER_CLI_STATIC=y
+BR2_PACKAGE_DOCKER_COMPOSE=y
+BR2_PACKAGE_DOCKER_CONTAINERD=y
+BR2_PACKAGE_DOCKER_ENGINE=y
